# KMP-Clean-MVI

./: .gitignore  README.md  compile_native.sh  settings.gradle.kts
app/androidApp/: build.gradle.kts
app/androidApp/src/main/kotlin/com/yangcyzhang/kmpcleanmvi/: MainActivity.kt
app/androidApp/src/main/res/values/: strings.xml
app/desktopApp/: build.gradle.kts
app/desktopApp/src/main/kotlin/com/yangcyzhang/kmpcleanmvi/: main.kt
app/iosApp/Configuration/: Config.xcconfig
app/iosApp/iosApp.xcodeproj/: project.pbxproj
app/shared/: build.gradle.kts
app/shared/native_lib/: simple_math.c  simple_math.h  simple_math_jni.c
app/shared/src/androidHostTest/kotlin/com/yangcyzhang/kmpcleanmvi/: SharedLogicAndroidHostTest.kt
app/shared/src/androidMain/cpp/: CMakeLists.txt  simple_math_jni.cpp
app/shared/src/androidMain/kotlin/com/yangcyzhang/kmpcleanmvi/: NativeMath.android.kt  Platform.android.kt
app/shared/src/commonMain/kotlin/com/yangcyzhang/kmpcleanmvi/: App.kt  Greeting.kt  NativeMath.kt  Platform.kt
app/shared/src/iosMain/kotlin/com/yangcyzhang/kmpcleanmvi/: Platform.ios.kt  (+2 more)
app/shared/src/nativeInterop/cinterop/: simple_math.def
app/webApp/: build.gradle.kts
app/webApp/src/webMain/resources/: index.html
core/: build.gradle.kts
core/src/commonMain/kotlin/com/yangcyzhang/kmpcleanmvi/: GreetingUtil.kt
docs/articles/: juejin_fullstack_kmp_native.md
gradle/: libs.versions.toml
server/: build.gradle.kts
server/src/main/kotlin/com/yangcyzhang/kmpcleanmvi/: Application.kt
server/src/test/kotlin/com/yangcyzhang/kmpcleanmvi/: ApplicationTest.kt
(+11 files in other folders)
